--- a/lab12/pizza.css
+++ b/lab12/pizza.css
@@ -139,3 +139,28 @@ nav {
     width: 20%;
     float: right;
 }
+
+.slogan {
+    text-align: center;
+    bottom: 0;
+    position: absolute;
+    clear: both;
+    left: 193px;
+    font-family: cabin-sketch,sans-serif;
+    font-size: 50px;
+    width: 396px;
+}
+
+.pizza {
+    clear: both;
+}
+
+iframe {
+    width: 400px;
+    height: 400px;
+    frameborder: 0;
+}
+
+.mapouter {
+    padding-top: 50px;
+}
