--- a/lab17/spenditures.css
+++ b/lab17/spenditures.css
@@ -3,6 +3,10 @@ html {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+html, body {
+    margin: 0;
+}
+
 td {
     padding: 2px 10px 2px 2px;
     border: none;
@@ -21,11 +25,14 @@ tr:nth-child(even) {
     background-color: darkred;
     padding: 10px;
     width: 100%;
+    position: relative;
 }
 
 .main-label {
     color: white;
     margin: 0;
+    display: inline-block;
+    width: 90%;
 }
 
 nav ul {
@@ -95,13 +102,50 @@ nav ul li {
     background-color: grey;
 }
 
+header .menu {
+    display: none;
+}
+
+.icon {
+    font-size: 1.5em;
+    color: white;
+}
+
 @media (max-width: 800px) {
     nav {
         display: none;
     }
+
+    .main-label {
+        width: auto;
+    }
     header .menu {
         position: absolute;
+        bottom: 0;
+        border-left: 1px solid white;
+        border-right: none;
+        font-size: 1.5em;
+        height: 57px;
+        display: inline-block;
+        width: 15%;
+        text-align: center;
         right: 0;
-        top: 10.5%;
+        background-color: #303030;
+    }
+    
+    .menu ul a {
+        font-size: 1em;
+    }
+
+    .menu ul {
+        right: 16%;
+        top: 45px;
+        left: auto;
+        list-style: none;
+    }
+
+    .menu ul li {
+        font-size: 1em;
+        border-left: none;
     }
 }
