--- a/lab12/pizza.css
+++ b/lab12/pizza.css
@@ -132,7 +132,7 @@ nav {
 
 .pizza-description {
     float: left;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .pizza-image img {
