--- a/prototype1/style.css
+++ b/prototype1/style.css
@@ -21,6 +21,36 @@ html,body
 footer{
     display: inline-block;
     width: 100%;
+    margin-bottom: 10px;
+}
+
+.media-body {
+    background-color: #111;
+}
+
+.carousel-inner {
+    max-height: 100vh;
+}
+
+.thumbnail-carousel {
+    list-style: none;
+    width: 100%;
+    margin: 1.5%;
+    display: inline-block;
+    padding-left: 0;
+    text-align: center;
+}
+
+.carousel-thumbnail-img {
+    margin: 0.5%;
+    border: white solid;
+    width: 31%;
+    max-width: 250px;
+}
+
+.thumb {
+    display: inline;
+    cursor: pointer;
 }
 
 .homepage-body { 
@@ -121,8 +151,24 @@ footer{
     transition: font-size .5s;
 }
 
+.carousel {
+    max-height: 100vh;
+    background-color: black;
+}
+
 .open-nav {
     font-size: 50px;
+}
+
+.featured-header {
+    height: 300px;
+    background: url(images/Alex2.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 100%;
+    background-position: 45% 26%;
+    z-index: 0;
 }
 
 /* Mobile */
@@ -132,7 +178,7 @@ footer{
         font-size:7vw;
         cursor:pointer;
         color: white;
-        z-index: 1;
+        z-index: 2;
         transition: margin-left .5s;
         width: 100%;
     }
@@ -144,6 +190,7 @@ footer{
     .signature {
         font-size: 7vw;
         padding-top: 10px;
+        z-index: 1;
     }
 
     .open-nav {
@@ -197,4 +244,11 @@ footer{
 @media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
+}
+
+.carousel-image {
+    max-height: 100vh;
+    max-width: 100vw;
+    margin-right: auto;
+    margin-left: auto;
 }
