--- a/prototype1/style.css
+++ b/prototype1/style.css
@@ -24,12 +24,26 @@ footer{
     margin-bottom: 10px;
 }
 
+p {
+    color: white;
+}
+
 .media-body {
     background-color: #111;
 }
 
 .carousel-inner {
-    max-height: 100vh;
+    max-height: 95vh !important;
+}
+
+.carousel-indicators {
+    bottom: 0px !important;
+}
+
+.carousel-caption {
+    right: 20%;
+    left: 20%;
+    padding-bottom: 48px !important;
 }
 
 .thumbnail-carousel {
@@ -90,13 +104,32 @@ footer{
     padding-right: 10%;
     margin-right: auto;
     margin-left: auto;
+    background-color: rgb(16,16,16);
     background-color: rgb(16,16,16,.6);
+    font-family: 'Open Sans', sans-serif;
+    padding-bottom: 10px;
+    z-index: -1;
+}
+
+.pages-container {
+    font-family: 'Open Sans', sans-serif;
+    top: 100%;
+    max-width: 100%;
+    padding-top: 10px;
+    padding-left: 15%;
+    padding-right: 15%;
+    margin-right: auto;
+    margin-left: auto;
     font-family: 'Open Sans', sans-serif;
     padding-bottom: 10px;
 }
 
 .page-header {
     margin-top: 60px;
+    color: white;
+}
+
+.page-title {
     color: white;
 }
 
@@ -149,6 +182,9 @@ footer{
     font-size: 50px;
     padding-top: 10px;
     transition: font-size .5s;
+    z-index: 1;
+    top: -10px;
+    text-shadow: 0px 0px 12px black;
 }
 
 .carousel {
@@ -161,7 +197,7 @@ footer{
 }
 
 .featured-header {
-    height: 300px;
+    height: 250px;
     background: url(images/Alex2.jpg);
     background-repeat: no-repeat;
     background-position: center;
@@ -182,6 +218,16 @@ footer{
         transition: margin-left .5s;
         width: 100%;
     }
+
+    .featured-header {
+        height: 200px;
+        box-shadow: 0px 0px 12px white;
+    }
+
+    .signature {
+        top: 0;
+    }
+
     .social-icons ul li img {
         width: 10%;
         margin-left: 46%;
@@ -193,14 +239,42 @@ footer{
         z-index: 1;
     }
 
+    .topnav { 
+        display: none;
+    }
+
     .open-nav {
         font-size: 5vw;
     }
 }
 
-/* Tablets */
-@media only screen and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) {
+@media (min-width: 701px) {
+    .topnav {
+        background-color: black;
+        width: 100%;
+        box-shadow: 0px 0px 12px white;
+        z-index: 2;
+    }
 
+    .topnav a {
+        color: white;
+        margin: 5px;
+        text-decoration: none;
+    }
+
+    .topnav a:hover {
+        color: dimgray;
+        text-decoration: dimgray underline;
+    }
+
+    .links {
+        width: 500px;
+        align-items: center;
+        text-align: center;
+        margin-right: auto;
+        margin-left: auto;
+        padding: 5px;
+    }
 }
 
 .sidenav {
