--- a/lab22/blog.css
+++ b/lab22/blog.css
@@ -12,24 +12,26 @@ header {
 
 #middle {
     background-color: deeppink;
-    padding: 10px;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
+    display: flex; 
+    flex-direction: row;
+    flex-grow: 1;
 }
 
 #left {
     background-color: aqua;
+    padding: 5px;
 }
 
 main {
     flex-grow: 1;
     background-color: white;
+    padding: 5px;
 }
 
 #right {
     background-color: red;
     display: flex;
+    padding: 5px;
 }
 
 footer {
@@ -45,11 +47,9 @@ footer {
 
 body {
     margin: 0;
-    min-height: 100vh;
     display: flex;
-    overflow: scroll;
-    flex-wrap: wrap;
-    flex-direction: row;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 .menu-h2 {
